# lumen

./: .clang-format  .clang-tidy  .gitignore  ARCHITECTURE_ALIGNMENT_REPORT.md  CMakeLists.txt  Cargo.toml  Makefile  README.md  test_btree_creation  test_btree_creation.cpp  test_btree_index_debug  test_btree_index_debug.cpp  test_btree_persistence_debug  test_btree_persistence_debug.cpp
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: lumen_benchmarks.rs
cmake/: CompilerFlags.cmake  Coverage.cmake  Dependencies.cmake  Install.cmake  LumenConfig.cmake.in  Platform.cmake  Version.cmake  lumen.pc.in
cmake/toolchains/: Windows.cmake
docs/: ci-architecture.md  cross-compilation.md  developer-guide.md
include/lumen/: lumen.h  types.h  version.h.in
include/lumen/common/: json.h  logging.h  status.h
include/lumen/index/: btree.h  btree_index.h
include/lumen/memory/: allocator.h  memory_manager.h
include/lumen/storage/: buffer_pool.h  page.h  single_file_storage.h  storage_engine.h  storage_interface.h
lumen-ffi/: Cargo.toml  build.rs
lumen-ffi/include/: lumen.h
lumen-ffi/src/: lib.rs
scripts/: check-tools.sh
src/: lib.rs  lumen_c_api.cpp  types.cpp
src/common/: error.rs  logging.cpp  logging.rs  mod.rs  status.cpp  test_utils.rs
src/index/: btree.cpp  btree_index.cpp  mod.rs
src/memory/: allocator.cpp  memory_manager.cpp
src/query/: mod.rs
src/storage/: buffer_pool.cpp  checksum.rs  mod.rs  page.cpp  page.rs  page_constants.rs  page_header.rs  page_io.rs  page_type.rs  single_file_storage.cpp  storage.cpp  storage_engine.cpp
src/types/: mod.rs
tests/: CMakeLists.txt  benchmark_main.cpp  integration_tests.rs  test_allocator.cpp  test_basic_include.cpp  test_btree.cpp  test_btree_debug.cpp  test_btree_index.cpp  test_btree_index_simple_debug.cpp  test_btree_insert.cpp  test_btree_simple.cpp  test_btree_split.cpp  test_buffer_pool.cpp  test_c_api.cpp  test_checksum.rs  test_edge_cases.rs  test_logging.cpp  test_main.cpp  test_memory_manager.cpp  test_page.cpp  test_page.rs  test_page_constants.rs  test_page_header.rs  test_page_io.rs  test_page_type.rs  test_single_file_storage.cpp  test_status.cpp  test_storage.cpp  test_storage_engine.cpp  test_storage_engine_simple.cpp  test_test_utils.cpp  test_types.cpp  test_utils.h
tests/integration/: mod.rs
