[package]
name = "lumen"
version = "0.1.0"
edition = "2021"
authors = ["Lumen Contributors"]
description = "High-performance embedded database with zero-failure tolerance"
repository = "https://github.com/yourusername/lumen"
license = "MIT OR Apache-2.0"
keywords = ["database", "embedded", "btree", "storage"]
categories = ["database", "data-structures"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "lumen"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
# Core dependencies
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }

# Storage and I/O
memmap2 = "0.9"
crc32fast = "1.4"
bytemuck = { version = "1.14", features = ["derive"] }

# Concurrency
parking_lot = "0.12"
crossbeam = "0.8"

# Serialization
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }

# Testing utilities (always available for integration tests)
uuid = { version = "1.6", features = ["v4"] }

[dev-dependencies]
# Testing
criterion = "0.5"
tempfile = "3.8"
proptest = "1.4"
pretty_assertions = "1.4"
lumen-ffi = { path = "lumen-ffi" }

# Benchmarking
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1

[[bench]]
name = "lumen_benchmarks"
harness = false

[workspace]
members = ["lumen-ffi"]

[features]
default = []
# Enable SIMD optimizations
simd = []
# Enable async I/O support
async = []
# Enable additional debugging features
debug-assertions = []